# dune-mmesh

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  dune-mmesh.pc.in  dune.module  package.py  paper.bib  paper.md  pylintrc  pyproject.toml  requirements.txt  setup.py
CGAL/: Cartesian_converter_fwd.h  FPU.h  Intersection_traits_2.h  Intersection_traits_3.h  Modular_traits.h  Residue.h  hilbert_sort.h
cmake/: config.opts  debug.opts
doc/: .gitignore  Makefile  about.rst  acknowledgements.rst  concepts.rst  conf.py  contribute.rst  cppreference.rst  examples.rst  index.rst  installation.rst  introduction.rst  (+6 more)
dune/mmesh/: CMakeLists.txt  Makefile  Makefile.in  mmesh.cc  mmesh.hh
dune/mmesh/cgal/: CMakeLists.txt  defaults.hh  includes.hh  triangulationwrapper.hh
dune/mmesh/grid/: CMakeLists.txt  cachingentity.hh  common.hh  connectedcomponent.hh  cutsettriangulation.hh  declaration.hh  dgfparser.hh  entity.hh  entityseed.hh  explicitgridfactory.hh  geometry.hh  gmshgridfactory.hh  gmshparser.hh  gmshreader.hh  gridfactory.hh  hierarchiciterator.hh  implicitgridfactory.hh  incidentiterator.hh  indexsets.hh  interfaceiterator.hh  intersectioniterator.hh  intersections.hh  leafiterator.hh  mmesh.hh  mmeshdefaults.hh  multiid.hh  pointfieldvector.hh  polygoncutting.hh  rangegenerators.hh  structuredgridfactory.hh
dune/mmesh/interface/: CMakeLists.txt  cachingentity.hh  common.hh  connectedcomponent.hh  curvatureoperator.hh  dgfparser.hh  entity.hh  entityseed.hh  geometry.hh  grid.hh  gridfactory.hh  hierarchiciterator.hh  incidentiterator.hh  indexsets.hh  intersectioniterator.hh  intersections.hh  leafiterator.hh  traits.hh
dune/mmesh/misc/: CMakeLists.txt  boundaryidprovider.hh  capabilities.hh  communication.hh  objectstream.hh  partitionhelper.hh  persistentcontainer.hh  pyskeletonfunction.hh  pyskeletontrace.hh  twistutility.hh
dune/mmesh/remeshing/: CMakeLists.txt  cellcenterrefinement.hh  distance.hh  edgelengthindicator.hh  edgelengthratioindicator.hh  interfaceindicator.hh  interfacerefinement.hh  longestedgerefinement.hh  newestvertexbisection.hh  ratioindicator.hh  volumeindicator.hh
dune/mmesh/test/: CMakeLists.txt  massoperator.hh  parameter  test-adapt-tuplespace.cc  test-carousel.cc  test-colliding-2d.cc  test-comm.cc  test-curvature.cc  test-distance.cc  test-femadaptation.cc  test-fvoninterfacegrid.cc  test-grid.cc  test-interfacegrid-2d.cc  test-interfacegrid-3d.cc  test-interfaceiterator.cc  test-intersectionvolume.cc  test-l2projection.cc  test-mimesh-3d.cc  test-mmesh-2d.cc  test-mmesh-3d.cc  test-mmesh-structured-2d.cc  test-mmesh-structured.cc  test-mpi.cc  test-threading.cc  test-twists.cc
dune/mmesh/test/examples/: CMakeLists.txt  cgal.cc  dgf-interval.cc  dgf.cc  gmsh-implicit.cc  gmsh.cc  interaction.cc  interfacegrid.cc  movement.cc
dune/mmesh/test/examples/grids/: cube2d.dgf  cube2d.geo  cube2d.msh  cube3d.geo  cube3d.msh  horizontal2d.msh  horizontal3d.geo
dune/mmesh/test/grids/: 2dgrid.dgf  colliding2d.geo  colliding2d.msh  cube2.dgf  cube2d.geo  cube2d.msh  cube3d.geo  cube3d.msh  ellipse2d.geo  ellipse2d.msh  ellipse2d_1e-2.msh  ellipse2d_2e-2.msh  ellipse2d_3e-2.msh  ellipse2d_5e-3.msh  ellipse2d_6e-3.msh  ellipse2d_7e-2.msh  ellipse2d_7e-3.msh  ellipse2d_8e-3.msh  ellipse2d_9e-2.msh  ellipse2d_9e-3.msh  ellipse3d_3e-2.msh  ellipse3d_5e-2.msh  ellipse3d_7e-2.msh  ellipse3d_9e-2.msh  flat3d.geo  horizontal2d.geo  horizontal2d.msh  horizontal3d.geo  horizontal3d.msh  interface2d.msh  interface3d.msh  junction2d.geo  junction2d.msh  line2d.geo  line2d.msh  meshconformer2d.geo  meshconformer2d.msh  meshconformer3d.geo  meshconformer3d.msh  mifvmesh2d.geo  (+15 more)
examples/: CMakeLists.txt  cgal-example.cc  cgal.cc  dgf-example.cc  dgf-interval-example.cc  dgf-interval.cc  dgf.cc  gmsh-example.cc  gmsh-explicit-example.cc  gmsh-implicit-example.cc  gmsh-implicit.cc  gmsh.cc  interaction.cc  interfacegrid-example.cc  interfacegrid.cc  movement.cc
examples/grids/: CMakeLists.txt  Makefile  beam2d.geo  beam2d.msh  beam3d.geo  beam3d.msh  circle.geo  circle.msh  cube2d.msh  cube2dinterval.dgf  cube3d.msh  horizontal2d.geo  horizontal2d.msh  horizontal3d.msh  interface3d.msh  junction.geo  junction.msh  quad.geo  quad.msh  sphere.geo  sphere.msh  tip.geo  tip.msh  tip2d.geo  tip2d.msh
examples/python/: CMakeLists.txt  adaptation.py  curvature.py  elasticity.py  geometrical.py  laplace-ipdg.py  laplace.py  mixeddimensionlaplace.py  mmesh.py  movement.py  poroelasticity.py  transport.py  twophaseflow.py  twophasestokes.py
examples/python/onep/: onep-bulk.vtu  onep-interface.vtp  onep.ipynb  onep.py  vertical.py  vertical2d.geo  vertical2d.msh
examples/python/onep/.ipynb_checkpoints/: onep-checkpoint.ipynb
examples/python/onepstokes/: horizontal.py  onepstokes.py
examples/python/poroelasticity/: dfc-poroelasticity.py  middle2d.geo  middle2d.msh  middlefull2d.geo  middlefull2d.msh  middlespline2d.geo  middlespline2d.msh  only-poroelasticity.py  pfs-poroelasticity-pf.vtu  pfs-poroelasticity.py  pfs-poroelasticity.vtu  poroelasticity-interface.vtp  poroelasticity.py  poroelasticity.vtu
lib/: CMakeLists.txt
python/dune/mmesh/: CMakeLists.txt  __init__.py  __main__.py  _distance.cc  _distance2d.cc  _distance3d.cc  _grid2d.cc  _grid3d.cc  _grids.py  _interfacegrid2d.cc  _interfacegrid3d.cc  _interfaceindicator2d.cc  _interfaceindicator3d.cc  _mimesh2.cc  _mimesh3.cc  _mmesh.cc  _mmesh2.cc  _mmesh3.cc  _move.py  _normals2d.cc  _normals3d.cc  _skeletontrace.py  _solve.py  _utility.py  _utility2d.cc  _utility3d.cc  utility.py
python/dune/mmesh/test/: .gitignore  CMakeLists.txt  __main__.py  adaptation.py  boundary.py  coupledsolve.py  distance.py  grid.py  interfaceindicator.py  laplace.py  line.py  monolithicsolve.py  normals.py  solve.py
python/dune/mmesh/test/grids/: CMakeLists.txt  line.py  plane.py  tjunction.py  vertical.msh  vertical.py
python/dune/mmesh/tutorial/: curvature.py  laplace.py  transport.py
python/dune/mmesh/tutorial/grids/: horizontal.py  spheres.py
(+104 files in other folders)
